Refactor "BasicOperations" to "Functions".

--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -88,21 +88,21 @@
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="AuxiliaryComponents\Stats.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit_OLD.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\MapCount.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\TMapForVariantAnalysis.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\VariantOutputStrategy.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\VariationAnalysis.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\Map.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\BulkIndex.cs" />
-    <Compile Include="BasicOperations\FirstOrderFunctions\AccumulationStats.cs" />
-    <Compile Include="BasicOperations\FirstOrderFunctions\Merge.cs" />
-    <Compile Include="BasicOperations\HigherOrderFunctions\CoverSummit_mid.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\InfoIndex.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\BatchIndex.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\RangeIndex.cs" />
-    <Compile Include="BasicOperations\IndexFunctions\BatchIndex2R.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\CoverSummit.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\CoverSummit_OLD.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\MapCount.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\TMapForVariantAnalysis.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\VariantOutputStrategy.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\VariationAnalysis.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\Map.cs" />
+    <Compile Include="Functions\IndexFunctions\BulkIndex.cs" />
+    <Compile Include="Functions\FirstOrderFunctions\AccumulationStats.cs" />
+    <Compile Include="Functions\FirstOrderFunctions\Merge.cs" />
+    <Compile Include="Functions\HigherOrderFunctions\CoverSummit_mid.cs" />
+    <Compile Include="Functions\IndexFunctions\InfoIndex.cs" />
+    <Compile Include="Functions\IndexFunctions\BatchIndex.cs" />
+    <Compile Include="Functions\IndexFunctions\RangeIndex.cs" />
+    <Compile Include="Functions\IndexFunctions\BatchIndex2R.cs" />
     <Compile Include="Comparers\StringComparer.cs" />
     <Compile Include="Di4.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
