Remove FirstOrderFunctions and HigherOrderFunctions folders.

--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -88,17 +88,17 @@
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="AuxiliaryComponents\Stats.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\CoverSummit.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\CoverSummit_OLD.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\MapCount.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\TMapForVariantAnalysis.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\VariantOutputStrategy.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\VariationAnalysis.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\Map.cs" />
+    <Compile Include="Functions\CoverSummit.cs" />
+    <Compile Include="Functions\CoverSummit_OLD.cs" />
+    <Compile Include="Functions\MapCount.cs" />
+    <Compile Include="Functions\TMapForVariantAnalysis.cs" />
+    <Compile Include="Functions\VariantOutputStrategy.cs" />
+    <Compile Include="Functions\VariationAnalysis.cs" />
+    <Compile Include="Functions\Map.cs" />
     <Compile Include="Functions\IndexFunctions\BulkIndex.cs" />
-    <Compile Include="Functions\FirstOrderFunctions\AccumulationStats.cs" />
-    <Compile Include="Functions\FirstOrderFunctions\Merge.cs" />
-    <Compile Include="Functions\HigherOrderFunctions\CoverSummit_mid.cs" />
+    <Compile Include="Functions\AccumulationStats.cs" />
+    <Compile Include="Functions\Merge.cs" />
+    <Compile Include="Functions\CoverSummit_mid.cs" />
     <Compile Include="Functions\IndexFunctions\InfoIndex.cs" />
     <Compile Include="Functions\IndexFunctions\BatchIndex.cs" />
     <Compile Include="Functions\IndexFunctions\RangeIndex.cs" />
