Refactor IndexFunctions to Index.

--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -95,14 +95,14 @@
     <Compile Include="Functions\VariantOutputStrategy.cs" />
     <Compile Include="Functions\VariationAnalysis.cs" />
     <Compile Include="Functions\Map.cs" />
-    <Compile Include="Functions\IndexFunctions\BulkIndex.cs" />
+    <Compile Include="Functions\Index\BulkIndex.cs" />
     <Compile Include="Functions\AccumulationStats.cs" />
     <Compile Include="Functions\Merge.cs" />
     <Compile Include="Functions\CoverSummit_mid.cs" />
-    <Compile Include="Functions\IndexFunctions\InfoIndex.cs" />
-    <Compile Include="Functions\IndexFunctions\BatchIndex.cs" />
-    <Compile Include="Functions\IndexFunctions\RangeIndex.cs" />
-    <Compile Include="Functions\IndexFunctions\BatchIndex2R.cs" />
+    <Compile Include="Functions\Index\InfoIndex.cs" />
+    <Compile Include="Functions\Index\BatchIndex.cs" />
+    <Compile Include="Functions\Index\RangeIndex.cs" />
+    <Compile Include="Functions\Index\BatchIndex2R.cs" />
     <Compile Include="Comparers\StringComparer.cs" />
     <Compile Include="Di4.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
