Move all retrieval functions to a new Retrieval folder.

--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -88,17 +88,17 @@
     <Compile Include="AuxiliaryComponents\PartitionBlockStruct.cs" />
     <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
     <Compile Include="AuxiliaryComponents\Stats.cs" />
-    <Compile Include="Functions\CoverSummit.cs" />
-    <Compile Include="Functions\CoverSummit_OLD.cs" />
-    <Compile Include="Functions\MapCount.cs" />
-    <Compile Include="Functions\TMapForVariantAnalysis.cs" />
-    <Compile Include="Functions\VariantOutputStrategy.cs" />
-    <Compile Include="Functions\VariationAnalysis.cs" />
-    <Compile Include="Functions\Map.cs" />
+    <Compile Include="Functions\Retrieval\CoverSummit.cs" />
+    <Compile Include="Functions\Retrieval\CoverSummit_OLD.cs" />
+    <Compile Include="Functions\Retrieval\MapCount.cs" />
+    <Compile Include="Functions\Retrieval\TMapForVariantAnalysis.cs" />
+    <Compile Include="Functions\Retrieval\VariantOutputStrategy.cs" />
+    <Compile Include="Functions\Retrieval\VariationAnalysis.cs" />
+    <Compile Include="Functions\Retrieval\Map.cs" />
     <Compile Include="Functions\Index\BulkIndex.cs" />
-    <Compile Include="Functions\AccumulationStats.cs" />
-    <Compile Include="Functions\Merge.cs" />
-    <Compile Include="Functions\CoverSummit_mid.cs" />
+    <Compile Include="Functions\Retrieval\AccumulationStats.cs" />
+    <Compile Include="Functions\Retrieval\Merge.cs" />
+    <Compile Include="Functions\Retrieval\CoverSummit_mid.cs" />
     <Compile Include="Functions\Index\InfoIndex.cs" />
     <Compile Include="Functions\Index\BatchIndex.cs" />
     <Compile Include="Functions\Index\RangeIndex.cs" />
