--- a/Di4/Di4/Di4.csproj
+++ b/Di4/Di4/Di4.csproj
@@ -106,12 +106,12 @@
     <Compile Include="Comparers\StringComparer.cs" />
     <Compile Include="Di4.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
-    <Compile Include="PrimaryComponents\BlockValue.cs" />
-    <Compile Include="PrimaryComponents\B.cs" />
-    <Compile Include="PrimaryComponents\BlockKey.cs" />
+    <Compile Include="Model\Bookmark\BlockValue.cs" />
+    <Compile Include="Model\Bookmark\B.cs" />
+    <Compile Include="Model\Bookmark\BlockKey.cs" />
     <Compile Include="AuxiliaryComponents\Options.cs" />
     <Compile Include="AuxiliaryComponents\Enums.cs" />
-    <Compile Include="PrimaryComponents\Lambda.cs" />
+    <Compile Include="Model\Bookmark\Lambda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializers\atIArraySerializer.cs" />
     <Compile Include="Serializers\BlockKeySerializer.cs" />
@@ -123,7 +123,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="PrimaryComponents\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
